--- a/animal-chipping-front/src/app/location/location.component.html
+++ b/animal-chipping-front/src/app/location/location.component.html
@@ -1,81 +1,123 @@
 <div class="container d-flex">
-    <div class="container border p-4">
-        <h3>Get a Location</h3>
-        <form [formGroup]="findForm" (ngSubmit)="findLocation()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
-                <label for="locationId">ID</label>
+    <div class="accordion w-50" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Get a Location
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="findForm" (ngSubmit)="findLocation()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="locationId" formControlName="locationId"
+                                placeholder="Enter Location ID">
+                            <label for="locationId">ID</label>
+                        </div>
+                        <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="foundedLocation">
+                        <div class="card-header">id: {{foundedLocation.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">latitude: {{foundedLocation.latitude}}</li>
+                            <li class="list-group-item">longitude: {{foundedLocation.longitude}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <button [disabled]="findForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="foundedLocation">
-            <div class="card-header">id: {{foundedLocation.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">latitude: {{foundedLocation.latitude}}</li>
-                <li class="list-group-item">longitude: {{foundedLocation.longitude}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Add a Location</h3>
-        <form [formGroup]="addForm" (ngSubmit)="addLocation()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="latitude" formControlName="latitude" placeholder="Enter Location latitude">
-                <label for="latitude">latitude</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Add a Location
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="addForm" (ngSubmit)="addLocation()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="latitude" formControlName="latitude"
+                                placeholder="Enter Location latitude">
+                            <label for="latitude">latitude</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="longitude" formControlName="longitude"
+                                placeholder="Enter Location longitude">
+                            <label for="longitude">longitude</label>
+                        </div>
+                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="createdLocation">
+                        <div class="card-header">id: {{createdLocation.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">latitude: {{createdLocation.latitude}}</li>
+                            <li class="list-group-item">longitude: {{createdLocation.longitude}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="longitude" formControlName="longitude" placeholder="Enter Location longitude">
-                <label for="longitude">longitude</label>
-            </div>
-            <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="createdLocation">
-            <div class="card-header">id: {{createdLocation.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">latitude: {{createdLocation.latitude}}</li>
-                <li class="list-group-item">longitude: {{createdLocation.longitude}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Update an Location</h3>
-        <form [formGroup]="updateForm" (ngSubmit)="updateLocation()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
-                <label for="locationId">ID</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Update an Location
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="updateForm" (ngSubmit)="updateLocation()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="locationId" formControlName="locationId"
+                                placeholder="Enter Location ID">
+                            <label for="locationId">ID</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="latitude" formControlName="latitude"
+                                placeholder="Enter Location latitude">
+                            <label for="latitude">latitude</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="longitude" formControlName="longitude"
+                                placeholder="Enter Location longitude">
+                            <label for="longitude">longitude</label>
+                        </div>
+                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="updatedLocation">
+                        <div class="card-header">id: {{updatedLocation.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">latitude: {{updatedLocation.latitude}}</li>
+                            <li class="list-group-item">longitude: {{updatedLocation.longitude}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="latitude" formControlName="latitude" placeholder="Enter Location latitude">
-                <label for="latitude">latitude</label>
-            </div>
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="longitude" formControlName="longitude" placeholder="Enter Location longitude">
-                <label for="longitude">longitude</label>
-            </div>
-            <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="updatedLocation">
-            <div class="card-header">id: {{updatedLocation.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">latitude: {{updatedLocation.latitude}}</li>
-                <li class="list-group-item">longitude: {{updatedLocation.longitude}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Delete an Location</h3>
-        <form [formGroup]="deleteForm" (ngSubmit)="deleteLocation()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
-                <label for="locationId">ID</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    Delete an Location
+                </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="deleteForm" (ngSubmit)="deleteLocation()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="locationId" formControlName="locationId"
+                                placeholder="Enter Location ID">
+                            <label for="locationId">ID</label>
+                        </div>
+                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <div class="alert alert-success mt-3" role="alert" *ngIf="isLocationDeleted">
+                            Location has been deleted!
+                        </div>
+                    </form>
+                </div>
             </div>
-            <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-            <div class="alert alert-success mt-3" role="alert" *ngIf="isLocationDeleted">
-                Location has been deleted!
-            </div>
-        </form>
+        </div>
     </div>
 </div>
