--- a/animal-chipping-front/src/app/visited-location/visited-location.component.html
+++ b/animal-chipping-front/src/app/visited-location/visited-location.component.html
@@ -1,63 +1,98 @@
 <div class="container d-flex">
-    <div class="container border p-4">
-        <h3>Add a Visited location</h3>
-        <form [formGroup]="addForm" (ngSubmit)="addVisitedLocation()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="animalId" formControlName="animalId" placeholder="Enter Animal ID">
-                <label for="animalId">Animal ID</label>
+    <div class="accordion w-50" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Add a Visited location
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="addForm" (ngSubmit)="addVisitedLocation()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="animalId" formControlName="animalId"
+                                placeholder="Enter Animal ID">
+                            <label for="animalId">Animal ID</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="locationId" formControlName="locationId"
+                                placeholder="Enter Visited location ID">
+                            <label for="locationId">Location ID</label>
+                        </div>
+                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="addedVisitedLocation">
+                        <div class="card-header">id: {{addedVisitedLocation.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">dateTimeOfVisitLocation:
+                                {{addedVisitedLocation.dateTimeOfVisitLocationPoint}}</li>
+                            <li class="list-group-item">locationId: {{addedVisitedLocation.locationPointId}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Visited location ID">
-                <label for="locationId">Location ID</label>
-            </div>
-            <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="addedVisitedLocation">
-            <div class="card-header">id: {{addedVisitedLocation.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">dateTimeOfVisitLocation: {{addedVisitedLocation.dateTimeOfVisitLocationPoint}}</li>
-                <li class="list-group-item">locationId: {{addedVisitedLocation.locationPointId}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Update a Visited location</h3>
-        <form [formGroup]="updateForm" (ngSubmit)="updateVisitedLocation()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="animalId" formControlName="animalId" placeholder="Enter Animal ID">
-                <label for="animalId">Animal ID</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Update a Visited location
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="updateForm" (ngSubmit)="updateVisitedLocation()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="animalId" formControlName="animalId"
+                                placeholder="Enter Animal ID">
+                            <label for="animalId">Animal ID</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="visitedLocationId"
+                                formControlName="visitedLocationId" placeholder="Enter Visited location ID">
+                            <label for="visitedLocationId">Visited Location ID</label>
+                        </div>
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="locationId" formControlName="locationId"
+                                placeholder="Enter Location ID">
+                            <label for="locationId">Location ID</label>
+                        </div>
+                        <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                    <div class="card mt-3" *ngIf="updatedVisitedLocation">
+                        <div class="card-header">id: {{updatedVisitedLocation.id}}</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">dateTimeOfVisitLocation:
+                                {{updatedVisitedLocation.dateTimeOfVisitLocationPoint}}</li>
+                            <li class="list-group-item">locationId: {{updatedVisitedLocation.locationPointId}}</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="visitedLocationId" formControlName="visitedLocationId" placeholder="Enter Visited location ID">
-                <label for="visitedLocationId">Visited Location ID</label>
-            </div>
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="locationId" formControlName="locationId" placeholder="Enter Location ID">
-                <label for="locationId">Location ID</label>
-            </div>
-            <button [disabled]="updateForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-        </form>
-        <div class="card mt-3" *ngIf="updatedVisitedLocation">
-            <div class="card-header">id: {{updatedVisitedLocation.id}}</div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">dateTimeOfVisitLocation: {{updatedVisitedLocation.dateTimeOfVisitLocationPoint}}</li>
-                <li class="list-group-item">locationId: {{updatedVisitedLocation.locationPointId}}</li>
-            </ul>
         </div>
-    </div>
-
-    <div class="container border p-4">
-        <h3>Delete an Visited location</h3>
-        <form [formGroup]="deleteForm" (ngSubmit)="deleteVisitedLocation()">
-            <div class="form-floating my-3">
-                <input type="number" class="form-control" id="visitedLocationId" formControlName="visitedLocationId" placeholder="Enter Visited location ID">
-                <label for="visitedLocationId">ID</label>
+        <div class="accordion-item">
+            <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Delete an Visited location
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <form [formGroup]="deleteForm" (ngSubmit)="deleteVisitedLocation()">
+                        <div class="form-floating my-3">
+                            <input type="number" class="form-control" id="visitedLocationId"
+                                formControlName="visitedLocationId" placeholder="Enter Visited location ID">
+                            <label for="visitedLocationId">ID</label>
+                        </div>
+                        <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
+                        <div class="alert alert-success mt-3" role="alert" *ngIf="isVisitedLocationDeleted">
+                            Visited location has been deleted!
+                        </div>
+                    </form>
+                </div>
             </div>
-            <button [disabled]="deleteForm.invalid" type="submit" class="btn btn-primary">Submit</button>
-            <div class="alert alert-success mt-3" role="alert" *ngIf="isVisitedLocationDeleted">
-                Visited location has been deleted!
-            </div>
-        </form>
+        </div>
     </div>
 </div>
